z-index fixes for shadows and wc3 button

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* *:hover {
-  outline: dashed .3vw rgba(202, 0, 0, 0.5);
+  outline: dashed 0.3vw rgba(202, 0, 0, 0.5);
 } */
 
 /* `Clear Floated Elements                      */
@@ -54,7 +54,7 @@ body > main > section:first-child {
 }
 
 #item_display {
-  height: 16em;
+  height: 18em;
 }
 
 #item_row {
@@ -68,15 +68,33 @@ body > main > section:first-child {
 
 .item_cell {
   display: inline-block;
-  margin: 0em 2em 2em 2em;
+  position: relative;
+  margin: 0em 2em;
   border-radius: 1em;
   filter: drop-shadow(0.4em 0.6em 0.2em rgba(0, 0, 0, 0.2))
     drop-shadow(0.2em 0.25em 0.07em rgba(0, 0, 0, 0.15));
   transition: opacity 500ms, transform 350ms, filter 350ms;
 }
 
+.item_cell:nth-child(5) {
+  z-index: 1;
+}
+.item_cell:nth-child(4) {
+  z-index: 2;
+}
+.item_cell:nth-child(3) {
+  z-index: 3;
+}
+.item_cell:nth-child(2) {
+  z-index: 4;
+}
+.item_cell:nth-child(1) {
+  z-index: 5;
+}
+
 .item_cell:hover,
 .item_cell:focus-within {
+  z-index: 99;
   filter: drop-shadow(1.5em 3em 2em rgba(0, 0, 0, 0.35))
     drop-shadow(1.5em 3em 0.6em rgba(0, 0, 0, 0.15));
 }
